Made OutputVariation a record.