@@ -10,75 +10,43 @@ import com.teamresourceful.resourcefulbees.common.lib.enums.ApiaryTier;
 import com.teamresourceful.resourcefulbees.common.lib.enums.BeehiveTier;
 import com.teamresourceful.resourcefullib.common.codecs.recipes.ItemStackCodec;
 import net.minecraft.world.item.ItemStack;
-import org.jetbrains.annotations.Unmodifiable;
 
 import java.util.*;
 import java.util.function.Consumer;
 
-@Unmodifiable
-public class OutputVariation {
+public record OutputVariation(String id,
+                              Map<BeehiveTier, ItemStack> hiveCombs,
+                              Map<ApiaryTier, ItemStack> apiaryCombs,
+                              Optional<ItemStack> defaultComb,
+                              Optional<ItemStack> defaultCombBlock
+) {
 
-    private static final List<ApiaryOutputType> DEFAULT_APIARY_OUTPUT_TYPES = Arrays.asList(CommonConfig.T1_APIARY_OUTPUT.get(), CommonConfig.T2_APIARY_OUTPUT.get(), CommonConfig.T3_APIARY_OUTPUT.get(), CommonConfig.T4_APIARY_OUTPUT.get());
-    private static final String MISSING_ID = "Identifier is REQUIRED!";
-    private static final String MISSING_APIARY_COMB = " : Default comb must be present when list is empty and config contains combs!!!";
-    private static final String MISSING_APIARY_BLOCK = " : Default block must be present when list is empty and config contains blocks!!!";
+    private static final List<ApiaryOutputType> DEFAULT_APIARY_OUTPUT_TYPES = List.of(CommonConfig.T1_APIARY_OUTPUT.get(), CommonConfig.T2_APIARY_OUTPUT.get(), CommonConfig.T3_APIARY_OUTPUT.get(), CommonConfig.T4_APIARY_OUTPUT.get());
     private static final boolean DEFAULT_OUTPUT_TYPE_INCLUDES_COMB = DEFAULT_APIARY_OUTPUT_TYPES.contains(ApiaryOutputType.COMB);
     private static final boolean DEFAULT_OUTPUT_TYPE_INCLUDES_BLOCK = DEFAULT_APIARY_OUTPUT_TYPES.contains(ApiaryOutputType.BLOCK);
 
     public static final Codec<OutputVariation> CODEC = RecordCodecBuilder.create(instance -> instance.group(
-            Codec.STRING.fieldOf("identifier").orElseGet((Consumer<String>) s -> ResourcefulBees.LOGGER.error(MISSING_ID), null).forGetter(OutputVariation::getIdentifier),
-            CodecUtils.BEEHIVE_VARIATIONS.fieldOf("hiveCombs").orElseGet(HashMap::new).forGetter(OutputVariation::getHiveCombs),
-            CodecUtils.APIARY_VARIATIONS.fieldOf("apiaryCombs").orElseGet(HashMap::new).forGetter(OutputVariation::getApiaryCombs),
-            ItemStackCodec.CODEC.optionalFieldOf("defaultComb").forGetter(OutputVariation::getDefaultComb),
-            ItemStackCodec.CODEC.optionalFieldOf("defaultCombBlock").forGetter(OutputVariation::getDefaultCombBlock)
-    ).apply(instance, OutputVariation::new));
+            Codec.STRING.fieldOf("identifier").orElseGet((Consumer<String>) s -> ResourcefulBees.LOGGER.error("Identifier is REQUIRED!"), null).forGetter(OutputVariation::id),
+            CodecUtils.BEEHIVE_VARIATIONS.fieldOf("hiveCombs").orElseGet(HashMap::new).forGetter(OutputVariation::hiveCombs),
+            CodecUtils.APIARY_VARIATIONS.fieldOf("apiaryCombs").orElseGet(HashMap::new).forGetter(OutputVariation::apiaryCombs),
+            ItemStackCodec.CODEC.optionalFieldOf("defaultComb").forGetter(OutputVariation::defaultComb),
+            ItemStackCodec.CODEC.optionalFieldOf("defaultCombBlock").forGetter(OutputVariation::defaultCombBlock)
+    ).apply(instance, OutputVariation::of));
 
-    private final String identifier;
-    private final EnumMap<BeehiveTier, ItemStack> hiveCombs;
-    private final EnumMap<ApiaryTier, ItemStack> apiaryCombs;
-    private final Optional<ItemStack> defaultComb;
-    private final Optional<ItemStack> defaultCombBlock;
-
-    private OutputVariation(String identifier, Map<BeehiveTier, ItemStack> hiveCombs, Map<ApiaryTier, ItemStack> apiaryCombs, Optional<ItemStack> defaultComb, Optional<ItemStack> defaultCombBlock) {
-        this.identifier = identifier;
-        this.hiveCombs = new EnumMap<>(BeehiveTier.class);
-        this.hiveCombs.putAll(hiveCombs);
-        this.apiaryCombs = new EnumMap<>(ApiaryTier.class);
-        this.apiaryCombs.putAll(apiaryCombs);
-        this.defaultComb = defaultComb;
-        this.defaultComb.ifPresent(comb -> comb.setCount(1));
-        this.defaultCombBlock = defaultCombBlock;
-        this.defaultCombBlock.ifPresent(block -> block.setCount(1));
-        fixHiveCombs();
-        fixApiaryCombs();
-    }
-
-    public String getIdentifier() {
-        return identifier;
-    }
-
-    private EnumMap<BeehiveTier, ItemStack> getHiveCombs() {
-        return hiveCombs;
-    }
-
-    private EnumMap<ApiaryTier, ItemStack> getApiaryCombs() {
-        return apiaryCombs;
-    }
-
-    private Optional<ItemStack> getDefaultComb() {
-        return defaultComb;
-    }
-
-    private Optional<ItemStack> getDefaultCombBlock() {
-        return defaultCombBlock;
+    private static OutputVariation of(String identifier, Map<BeehiveTier, ItemStack> hiveCombs, Map<ApiaryTier, ItemStack> apiaryCombs, Optional<ItemStack> defaultComb, Optional<ItemStack> defaultCombBlock) {
+        defaultComb.ifPresent(comb -> comb.setCount(1));
+        defaultCombBlock.ifPresent(block -> block.setCount(1));
+        hiveCombs = fixHiveCombs(new EnumMap<>(hiveCombs), defaultComb);
+        apiaryCombs = fixApiaryCombs(identifier, new EnumMap<>(apiaryCombs), defaultComb, defaultCombBlock);
+        return new OutputVariation(identifier, hiveCombs, apiaryCombs, defaultComb, defaultCombBlock);
     }
 
     public ItemStack getHiveOutput(BeehiveTier tier) {
-        return getHiveCombs().get(tier).copy();
+        return hiveCombs().get(tier).copy();
     }
 
     public ItemStack getApiaryOutput(ApiaryTier tier) {
-        return getApiaryCombs().get(tier).copy();
+        return apiaryCombs().get(tier).copy();
     }
 
     /**
@@ -86,7 +54,7 @@ public class OutputVariation {
      * When the {@link #hiveCombs} list is empty, then a list will be created using the default comb. The {@link #defaultComb} <b>MUST</b>
      * be provided for the list to be created!
      * */
-    private void fixHiveCombs() {
+    private static Map<BeehiveTier, ItemStack> fixHiveCombs(Map<BeehiveTier, ItemStack> hiveCombs, Optional<ItemStack> defaultComb) {
         ItemStack lastStack = defaultComb.map(ItemStack::copy).orElse(null);
         if (lastStack == null && hiveCombs.isEmpty()) throw new IllegalArgumentException("HiveCombs list can't be empty without a default comb supplied!!");
         for (BeehiveTier tier : BeehiveTier.values()) {
@@ -94,6 +62,7 @@ public class OutputVariation {
             if (comb != null) { lastStack = comb; continue; }
             hiveCombs.put(tier, lastStack);
         }
+        return Collections.unmodifiableMap(hiveCombs);
     }
 
     /**
@@ -101,10 +70,10 @@ public class OutputVariation {
      * When the {@link #apiaryCombs} list is empty then a new list will be created based on the values specified in the config.
      * <b>BOTH</b> a {@link #defaultComb} and a {@link #defaultCombBlock} <b>MUST</b> be supplied for the list when they are specified in the config!
      * */
-    private void fixApiaryCombs() {
+    private static Map<ApiaryTier, ItemStack> fixApiaryCombs(String id, Map<ApiaryTier, ItemStack> apiaryCombs, Optional<ItemStack> defaultComb, Optional<ItemStack> defaultCombBlock) {
         ItemStack lastStack = null;
         boolean wasEmpty = apiaryCombs.isEmpty();
-        if (wasEmpty) checkDefaultsAreOK();
+        if (wasEmpty) checkDefaultsAreOK(id, defaultComb, defaultCombBlock);
         for (ApiaryTier tier : ApiaryTier.values()) {
             ItemStack comb = apiaryCombs.get(tier);
             if (comb != null) {
@@ -120,13 +89,14 @@ public class OutputVariation {
             }
             apiaryCombs.put(tier, lastStack);
         }
+        return Collections.unmodifiableMap(apiaryCombs);
     }
 
-    private void checkDefaultsAreOK() {
+    private static void checkDefaultsAreOK(String id, Optional<ItemStack> defaultComb, Optional<ItemStack> defaultCombBlock) {
         if (DEFAULT_OUTPUT_TYPE_INCLUDES_COMB && defaultComb.isEmpty()) {
-            throw new IllegalArgumentException(identifier + MISSING_APIARY_COMB);
+            throw new IllegalArgumentException(id + " : Default comb must be present when list is empty and config contains combs!!!");
         } else if (DEFAULT_OUTPUT_TYPE_INCLUDES_BLOCK && defaultCombBlock.isEmpty()) {
-            throw new IllegalArgumentException(identifier + MISSING_APIARY_BLOCK);
+            throw new IllegalArgumentException(id + " : Default block must be present when list is empty and config contains blocks!!!");
         }
     }
 }
